# fastapi-postgres-blog

./: .env.example  README.md  compose-dev.yml  compose.yml  pyproject.toml
docker/: Dockerfile
web/app/: ioc.py  main.py
web/app/api/: auth.py  comments.py  dependencies.py  posts.py  users.py
web/app/core/: config.py  security.py
web/app/db/: models.py
web/app/mappers/: posts.py
web/app/repositories/: __init__.py  comments.py  generic.py  posts.py  users.py  utils.py
web/app/schemas/: auth.py  comments.py  mixins.py  posts.py  reusable.py  users.py
web/app/services/: __init__.py  posts.py
web/app/utils/: fastapi.py  functions.py
web/migrations/: env.py
web/migrations/versions/: 237c153f1533_initial_migration.py  80063bb6e43d_add_cascade_delete.py
