[project]
name = "litestar-postgres-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka==1.4.0",
    "pydantic[email]==2.9.2",
    "redis[hiredis]==5.1.1",
    "taskiq==0.11.7",
    "taskiq-redis==1.0.2",
    "uvicorn[standard]==0.32.0",
    "alembic==1.13.3",
    "pydantic-settings==2.5.2",
    "psycopg2-binary==2.9.9",
    "pyjwt==2.9.0",
    "bcrypt==4.2.0",
    "loguru==0.7.2",
    "asyncpg==0.29.0",
    "fastapi==0.115.4",
    "sqlalchemy==2.0.36",
]
